--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
-server.port=0
+server.port=8081
 
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVER_USER}:${EUREKA_SERVER_PASSWORD}@localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVER_USER}:${EUREKA_SERVER_PASSWORD}@${EUREKA_SERVER_URL}:8761/eureka/
 eureka.instance.preferIpAddress=true
