refactor: Refatoração para uso de mensageiria com RabbitMQ.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,14 @@ server.port=8081
 
 eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVER_USER}:${EUREKA_SERVER_PASSWORD}@${EUREKA_SERVER_URL}:8761/eureka/
 eureka.instance.preferIpAddress=true
+
+spring.rabbitmq.host=${RABBITMQ_URL}
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=${RABBITMQ_USER}
+spring.rabbitmq.password=${RABBITMQ_PWD}
+
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=4
+spring.rabbitmq.listener.simple.retry.initial-interval=5000
+spring.rabbitmq.listener.simple.retry.multiplier=2
+spring.rabbitmq.listener.simple.retry.max-interval=300000
